--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.2"
   },
@@ -41,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "apollo": "^2.27.4"
   }
 }
