--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,19 @@
   "dependencies": {
     "@types/node": "^13.13.5",
     "@types/validator": "^13.0.0",
+    "apollo-cache-control": "^0.11.0",
     "apollo-server": "^2.12.0",
+    "apollo-server-express": "^2.15.0",
     "graphql": "^15.0.0",
     "isemail": "^3.2.0",
     "nodemon": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.7",
     "sequelize-typescript": "^1.1.0",
+    "sharp": "^0.25.4",
     "sqlite3": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/sharp": "^0.25.0"
   }
 }
