--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/client": "^3.1.2",
+    "@apollo/link-error": "^2.0.0-beta.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,7 +12,6 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "apollo-boost": "^0.4.9",
     "apollo-upload-client": "^13.0.0",
     "graphql": "^15.0.0",
     "material-design-icons": "^3.0.1",
@@ -44,9 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@types/apollo-upload-client": "^8.1.3",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
-    "apollo": "^2.27.4"
+    "@types/apollo-upload-client": "^8.1.3"
   }
 }
