--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sharp": "^0.25.4"
   },
   "devDependencies": {
-    "@types/sharp": "^0.25.0"
+    "@types/sharp": "^0.25.0",
+    "typescript": "^3.9.7"
   }
 }
