--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && nodemon js/index.js",
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,7 +29,6 @@
     "sharp": "^0.25.4"
   },
   "devDependencies": {
-    "@types/sharp": "^0.25.0",
-    "typescript": "^3.9.7"
+    "@types/sharp": "^0.25.0"
   }
 }
