--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "tsc && nodemon js/index.js",
     "build-ts": "tsc",
+    "tsc-watch": "tsc -w",
     "postinstall": "npm run build-ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
