--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-cache-control": "^0.11.0",
     "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.15.0",
+    "cors": "^2.8.5",
     "graphql": "^15.0.0",
     "isemail": "^3.2.0",
     "nodemon": "^2.0.3",
