--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^13.13.5",
     "@types/validator": "^13.0.0",
     "apollo-cache-control": "^0.11.0",
     "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.15.0",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "graphql": "^15.0.0",
     "isemail": "^3.2.0",
