--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.13.5",
     "@types/validator": "^13.0.0",
     "apollo-cache-control": "^0.11.0",
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "graphql": "^15.0.0",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.3",
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
