--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    // "strictNullChecks": true,
+    "strict": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
